--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * { margin: 0; padding: 0; }
 html { height: 101%; }
-body { background: #f2f2f2 url('images/bg-tile.png'); font-size: 62.5%; padding-bottom: 65px; }
+body { background: #f2f2f2 url('bg-tile.png'); font-size: 62.5%; padding-bottom: 65px; }
 
 nav a { font-family: "Simonetta", "Trebuchet MS", Arial, sans-serif; color: #454545; font-size: 1.8em; margin-bottom: 6px; 
   
