--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * { margin: 0; padding: 0; }
 html { height: 101%; }
-body { background: #f2f2f2 url('bg-tile.png'); font-size: 62.5%; padding-bottom: 65px; }
+body { background: #f2f2f2 url('images/bg-tile.png'); font-size: 62.5%; padding-bottom: 65px; }
 
 nav a { font-family: "Simonetta", "Trebuchet MS", Arial, sans-serif; color: #454545; font-size: 1.8em; margin-bottom: 6px; 
   
@@ -20,7 +20,7 @@ h4 { font-family: "Trebuchet MS", Verdana, Arial, sans-serif; color: #656565; fo
 p { font-family: "Balthazar", "Droid Serif", serif; color: #565656; font-size: 1.8em; line-height: 1.4em; margin-bottom: 15px; padding-left: 35px; }
 small { font-family: "Balthazar", "Droid Serif", serif; color: #656565; font-size: 1.6em; display: block; margin-bottom: 6px; }
 ul { display: block; list-style: none; }
-ul li { padding-left: 45px; list-style-type: none; vertical-align: top; background: url('bullet.png') 25px 5px no-repeat; margin-bottom: 5px; font-family: "Balthazar", "Droid Serif", serif; color: #666; font-size: 1.6em; line-height: 2.3em; }
+ul li { padding-left: 45px; list-style-type: none; vertical-align: top; background: url('images/bullet.png') 25px 5px no-repeat; margin-bottom: 5px; font-family: "Balthazar", "Droid Serif", serif; color: #666; font-size: 1.6em; line-height: 2.3em; }
 
 img { border: 0; max-width: 100%; }
 
@@ -45,6 +45,11 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 background-color: #fff;
 border: 1px solid #ccc;
 padding: 5px; 
+}
+#photo img{
+  display: flex;
+  justify-content: space-around;
+  
 }
 
 /** @group skills **/
