--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,9 @@ padding: 5px;
 }
 #photo img{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  max-width: 20%;
+  max-height: 20%;
   
 }
 
