--- a/styles.css
+++ b/styles.css
@@ -47,11 +47,37 @@ border: 1px solid #ccc;
 padding: 5px; 
 }
 #photohouse{
-  display: grid;
-  justify-content: space-between;
+  display: flex;
+  justify-items: space-around;
   max-width: 8%;
   max-height: 8%;
   
+}
+#photohouse img{
+    
+  max-width: 8%;
+  max-height: 8%
+  
+}
+input {
+  padding: 20px;
+  border-radius: 8px;
+  outline: none;
+  
+  
+}
+button {
+  padding: 20px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  
+  
+}
+textarea{
+  padding: 20px;
+  border-radius: 8px;
+  outline: none;
 }
 
 /** @group skills **/
