--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * { margin: 0; padding: 0; }
 html { height: 101%; }
-body { background: #f2f2f2 url('images/bg-tile.png'); font-size: 62.5%; padding-bottom: 65px; }
+body { background: #f2f2f2 url('bg-tile.png'); font-size: 62.5%; padding-bottom: 65px; }
 
 nav a { font-family: "Simonetta", "Trebuchet MS", Arial, sans-serif; color: #454545; font-size: 1.8em; margin-bottom: 6px; 
   
@@ -12,7 +12,7 @@ nav {
 
 h1 { font-family: "Simonetta", "Trebuchet MS", Arial, sans-serif; color: #454545; font-size: 3.6em; margin-bottom: 6px; }
 h2 { font-family: "Simonetta", "Trebuchet MS", Arial, sans-serif; color: #484848; font-size: 2.5em; margin-bottom: 10px; text-decoration: underline; 
-  text-align: centee;
+  text-align: center;
 }
 h3 { font-family: "Trebuchet MS", Verdana, Arial, sans-serif; color: #777; font-weight: normal; font-size: 1.8em; margin-bottom: 10px; }
 h4 { font-family: "Trebuchet MS", Verdana, Arial, sans-serif; color: #656565; font-weight: bold; font-size: 1.75em; margin-bottom: 4px; }
@@ -20,7 +20,7 @@ h4 { font-family: "Trebuchet MS", Verdana, Arial, sans-serif; color: #656565; fo
 p { font-family: "Balthazar", "Droid Serif", serif; color: #565656; font-size: 1.8em; line-height: 1.4em; margin-bottom: 15px; padding-left: 35px; }
 small { font-family: "Balthazar", "Droid Serif", serif; color: #656565; font-size: 1.6em; display: block; margin-bottom: 6px; }
 ul { display: block; list-style: none; }
-ul li { padding-left: 45px; list-style-type: none; vertical-align: top; background: url('images/bullet.png') 25px 5px no-repeat; margin-bottom: 5px; font-family: "Balthazar", "Droid Serif", serif; color: #666; font-size: 1.6em; line-height: 2.3em; }
+ul li { padding-left: 45px; list-style-type: none; vertical-align: top; background: url('images/bullet.png') 25px 5px no-repeat; margin-bottom: 5px; font-family: "Balthazar", "Droid Serif", serif; color: #666; font-size: 2em; line-height: 2.3em; }
 
 img { border: 0; max-width: 100%; }
 
@@ -48,15 +48,15 @@ padding: 5px;
 }
 #photohouse{
   display: flex;
-  justify-items: space-around;
-  max-width: 8%;
-  max-height: 8%;
+  justify-content: space-between;
+  max-width: 20%;
+  max-height: 20%;
   
 }
 #photohouse img{
     
-  max-width: 8%;
-  max-height: 8%
+  max-width: 20%;
+  max-height: 20%
   
 }
 input {
@@ -66,18 +66,30 @@ input {
   
   
 }
+#but{
+  display: grid;
+  justify-content: center;
+}
+
 button {
   padding: 20px;
   background-color: black;
   color: white;
   cursor: pointer;
-  
+  border-radius: 8px;
+  width: 50%;
+  text-align: center;
   
 }
 textarea{
   padding: 20px;
   border-radius: 8px;
   outline: none;
+}
+#contact{
+  display: grid;
+  justify-content: center;
+
 }
 
 /** @group skills **/
