--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,13 @@ a:hover { text-decoration: underline; }
 header { width: 100%; }
 
 /** @group personal settings **/
-#info { float: left; margin-bottom: 12px; text-align:center;}
+#info { 
+  display: grid;
+  justify-content: center;
+margin-bottom: 12px;
+text-align:center;
+  
+}
 #photo { float: right; }
 #photo img { 
 -webkit-border-radius: 3px;
@@ -49,14 +55,14 @@ padding: 5px;
 #photohouse{
   display: flex;
   justify-content: space-between;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 50%;
+  max-height: 50%;
   
 }
 #photohouse img{
     
-  max-width: 100%;
-  max-height: 100%
+  max-width: 50%;
+  max-height: 50%
   
 }
 input {
